refactor: use new screenshot component

--- a/docs/code-samples/automated-code-sample-urls.mdx
+++ b/docs/code-samples/automated-code-sample-urls.mdx
@@ -4,7 +4,9 @@ sidebar_label: "Automated Code Sample URLs"
 slug: "/automated-code-sample-urls/"
 ---
 
-
+import combinedSpecImage from '@/content/docs/assets/code-samples/combined-spec.png'
+import combinedSpecDetailsImage from '@/content/docs/assets/code-samples/combined-spec-details.png'
+import automaticCodeSamplesImage from '@/content/docs/assets/code-samples/automatic-code-samples-url-unavailable.png'
 
 # Automated code sample URLs
 
@@ -14,15 +16,21 @@ This is the most elegant solution for exposing code samples to documentation pro
 In the **APIs** tab of the dashboard, look for an entry marked as **Combined Spec**.
 Click into the entry to see a breakdown of the base OpenAPI document and code samples overlays that were used to produce it.
 
-<Screenshot darkened>
-  ![Screenshot of the dashboard showing a Combined
-  Spec.](../assets/code-samples/combined-spec.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  image={{
+    src: combinedSpecImage,
+    alt: "Screenshot of the dashboard showing a Combined Spec."
+  }}
+/>
 
-<Screenshot darkened>
-  ![Screenshot of the dashboard showing Combined Spec
-  details.](../assets/code-samples/combined-spec-details.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  image={{
+    src: combinedSpecDetailsImage,
+    alt: "Screenshot of the dashboard showing Combined Spec details."
+  }}
+/>
 
 To configure one of these combined code sample specs as a public URL for documentation providers, visit the **Docs** tab in the Speakeasy dashboard.
 
@@ -35,10 +43,13 @@ Based on this, Speakeasy generates a combined spec in the background that contai
 
 If you have not yet completed your SDK setup in GitHub, you may see a notification like the following in the **Docs** tab.
 
-<Screenshot darkened>
-  ![Automatic code sample URLs not
-  available.](../assets/code-samples/automatic-code-samples-url-unavailable.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  image={{
+    src: automaticCodeSamplesImage,
+    alt: "Automatic code sample URLs not available."
+  }}
+/>
 
 To use automated code sample URLs, your SDK must meet the following requirements:
 
