--- a/docs/create-client-sdks.mdx
+++ b/docs/create-client-sdks.mdx
@@ -3,11 +3,15 @@ title: Generate SDKs from OpenAPI
 description: "Learn how to create production-ready SDKs from your OpenAPI / Swagger spec using Speakeasy."
 ---
 
-
 import { SupportedLanguagesData } from "~/data/shared/supportedLanguages";
 import { IconGrid } from "~/features/shared/recipes";
-
 import { SignUpButton } from "~/features/shared/recipes";
+import quickstart1Image from '@/content/docs/assets/create-sdks/quickstart-1.png'
+import quickstart2Image from '@/content/docs/assets/create-sdks/quickstart-2.png'
+import quickstart3Image from '@/content/docs/assets/create-sdks/quickstart-3.png'
+import quickstart4Image from '@/content/docs/assets/create-sdks/quickstart-4.png'
+import quickstart5Image from '@/content/docs/assets/create-sdks/quickstart-5.png'
+import studio1Image from '@/content/docs/assets/create-sdks/studio-1.png'
 
 # Generate SDKs from OpenAPI
 
@@ -72,10 +76,13 @@ The CLI will prompt you to authenticate with your Speakeasy account. A browser w
 
 After authenticating you will be prompted to input an OpenAPI document:
 
-<Screenshot variant="cli" docs={true}>
-  ![Screenshot of the terminal after running speakeasy
-  quickstart.](./assets/create-sdks/quickstart-1.png)
-</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: quickstart1Image,
+    alt: "Screenshot of the terminal after running speakeasy quickstart."
+  }}
+/>
 
 Provide either a link to a remote hosted OpenAPI document, or a relative path to a local file in one of the supported formats:
 
@@ -101,17 +108,23 @@ After configuring the OpenAPI document, the next step prompt is to name your SDK
 
 Choose a name for your SDK. And pick an SDK output directory.
 
-<Screenshot variant="cli" docs={true}>
-  ![Screenshot of the terminal with optional
-  parameters.](./assets/create-sdks/quickstart-2.png)
-</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: quickstart2Image,
+    alt: "Screenshot of the terminal with optional parameters."
+  }}
+/>
 
 There will then be a language selection prompt:
 
-<Screenshot variant="cli" docs={true}>
-  ![Screenshot of the terminal prompting user to select
-  language.](./assets/create-sdks/quickstart-3.png)
-</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: quickstart3Image,
+    alt: "Screenshot of the terminal prompting user to select language."
+  }}
+/>
 
 For each language,Speakeasy has crafted generators with language experts to be highly idiomatic. Follow the links below for all the details on the design decisions that have gone into each language we support:
 
@@ -123,17 +136,23 @@ The final steps are to configure a package name for the SDK package and pick an 
 
 Then you specify the output directory for the generated SDK.
 
-<Screenshot variant="cli" docs={true}>
-![Screenshot of the terminal with optional
-parameters.](./assets/create-sdks/quickstart-4.png)
-</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: quickstart4Image,
+    alt: "Screenshot of the terminal with optional parameters."
+  }}
+/>
 
 Speakeasy validates the specifications and generates the SDK after receiving all inputs. The process executes [`speakeasy run`](/docs/speakeasy-reference/cli/run) to validate, generate, compile, and set up the SDK. A confirmation message displays the generated SDK details upon successful completion:
 
-<Screenshot variant="cli" docs={true}>
-  ![Screenshot of the terminal showing
-  success.](./assets/create-sdks/quickstart-5.png)
-</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: quickstart5Image,
+    alt: "Screenshot of the terminal showing success."
+  }}
+/>
 
 ---
 
@@ -143,9 +162,13 @@ If the SDK is successfully generated, there will be a prompt asking the user to 
 
 Saved changes in the Studio automatically triggers a regeneration of the SDK locally.
 
-<Screenshot variant="webapp" docs={true}>
-  ![Screenshot of the Speakeasy Studio.](./assets/create-sdks/studio-1.png)
-</Screenshot>
+<Screenshot 
+  variant="web" 
+  image={{
+    src: studio1Image,
+    alt: "Screenshot of the Speakeasy Studio."
+  }}
+/>
 
 It is also posisble to make changes without the Studio. Check out the following guide on [customizing your SDKs](/docs/customize-sdks/) for all the details.
 
