--- a/docs/customize/webhooks.mdx
+++ b/docs/customize/webhooks.mdx
@@ -4,7 +4,7 @@ description: "Learn how to generate webhook types in your Speakeasy client SDKs 
 slug: "/customize-sdks/webhooks/"
 ---
 
-
+import webhooksBillingImage from '@/content/docs/assets/webhooks-billing.png'
 
 # Add webhooks to your SDKs
 
@@ -26,11 +26,13 @@ slug: "/customize-sdks/webhooks/"
 2. Enable the webhooks add-on to your account under `settings/billing`:
 
 <Screenshot
-  darkened
+  variant="web"
   url="app.speakeasy.com"
->
-  ![Webhooks add on in the Speakeasy dashboard.](../assets/webhooks-billing.png)
-</Screenshot>
+  image={{
+    src: webhooksBillingImage,
+    alt: "Webhooks add on in the Speakeasy dashboard."
+  }}
+/>
 
 ## Example
 
