--- a/docs/manage/github-setup.mdx
+++ b/docs/manage/github-setup.mdx
@@ -4,8 +4,10 @@ description: "Learn how to set up your GitHub repo to automatically generate and
 position: 1
 ---
 
-
-
+import configureGithubImage from '@/content/docs/assets/configure-github/configure.png'
+import successfulWorkflowImage from '@/content/docs/assets/configure-github/successful-workflow.png'
+import workflowPermissionsImage from '@/content/docs/assets/configure-github/workflow-permissions.png'
+import remoteUrlSchemaImage from '@/content/docs/assets/configure-github/remote-url-schema.png'
 
 # Set up your SDK on GitHub
 
@@ -62,10 +64,13 @@ speakeasy configure github
 
 After running the command, `.speakeasy/workflow.yaml` and `.github/workflows/sdk_generation.yaml` will be created. These files define the SDK generation workflow and the associated GitHub Action.
 
-<Screenshot variant="cli">
-  ![Screenshot of the terminal after successfully running Speakeasy configure
-  Github.](../assets/configure-github/configure.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: configureGithubImage,
+    alt: "Screenshot of the terminal after successfully running Speakeasy configure Github."
+  }}
+/>
 
 If further customization is needed, [manual configuration](/docs/workflow-reference/generation-reference) of the workflow files is available.
 
@@ -83,28 +88,30 @@ Commit and push the generated workflow files to the repository. To test your Git
 Navigate to **Actions** in the GitHub repository to trigger the SDK generation workflow manually or wait for it to run automatically. A green checkmark indicates successful workflow completion. If the publishing step has not been configured, it will be skipped.
 
 <Screenshot
-  darkened
+  variant="web"
   url="https://github.com/speakeasy-sdks/example/actions/runs/9900330987"
->
-  ![A screenshot of a successful generate
-  flow.](../assets/configure-github/successful-workflow.png)
-</Screenshot>
+  image={{
+    src: successfulWorkflowImage,
+    alt: "A screenshot of a successful generate flow."
+  }}
+/>
 
 For details on package publishing, refer to the [Publishing SDKs guide](/docs/publish-sdk).
 
 ### Update the GitHub Actions workflow permissions
 
-If the error `403 GitHub Actions is not permitted to create or approve pull requests` occurs, the repository’s GitHub Actions permissions must be updated.
+If the error `403 GitHub Actions is not permitted to create or approve pull requests` occurs, the repository's GitHub Actions permissions must be updated.
 
 Navigate to **Settings > Actions > Workflow permissions** and adjust the permissions accordingly.
 
 <Screenshot
-  darkened
+  variant="web"
   url="https://github.com/speakeasy-sdks/example/settings/actions"
->
-  ![Github Actions workflow
-  permissions.](../assets/configure-github/workflow-permissions.png)
-</Screenshot>
+  image={{
+    src: workflowPermissionsImage,
+    alt: "Github Actions workflow permissions."
+  }}
+/>
 
 ### Configure remote URLs for schemas
 
@@ -115,10 +122,13 @@ Navigate to **Settings > Actions > Workflow permissions** and adjust the permiss
 
 If the OpenAPI schema is hosted in another repository or at a remote URL, set the `source` as the remote URL in `.speakeasy/workflow.yaml`. Use the following command to add the remote URL:
 
-<Screenshot variant="cli">
-  ![Configure Remote URL for
-  schema.](../assets/configure-github/remote-url-schema.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: remoteUrlSchemaImage,
+    alt: "Configure Remote URL for schema."
+  }}
+/>
 
 To authenticate the remote URL, provide a token or key stored as an environment variable (for example, `$OPENAPI_DOC_AUTH_TOKEN`).
 
