--- a/docs/manage/versioning.mdx
+++ b/docs/manage/versioning.mdx
@@ -1,5 +1,11 @@
+---
+title: "SDK versioning"
+description: "Learn how to manage SDK versioning in Speakeasy."
+---
 
-
+import labelsLocationImage from '@/content/docs/assets/labels-location.png'
+import versioning1Image from '@/content/docs/assets/versioning-1.png'
+import versioning2Image from '@/content/docs/assets/versioning-2.png'
 
 # SDK versioning
 
@@ -69,9 +75,14 @@ Speakeasy supports label-based versioning via GitHub pull request (PR) UI:
 
 2. Manual override option: Override the suggestion by removing the current label and adding a `major`, `minor`, or `patch` label to the PR. Use the bump type `graduate` to move out of pre-release stage. The SDK version updates automatically on the next generation and persists across regenerations until changed.
 
-<Screenshot darkened url="https://github.com/speakeasy-sdks/bar-python/pull/8">
-![Screenshot of the publishing tab in the Speakeasy dashboard.](../assets/labels-location.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="https://github.com/speakeasy-sdks/bar-python/pull/8"
+  image={{
+    src: labelsLocationImage,
+    alt: "Screenshot of the publishing tab in the Speakeasy dashboard."
+  }}
+/>
 
 3. Immediate generation: Label-based versioning is active in all SDK generation workflows. To automate generation immediately after label addition, add the following action trigger to the GitHub workflow file (typically at `.github/workflows/sdk_generation.yaml`):
 
@@ -109,15 +120,25 @@ To set a version manually in the Speakeasy dashboard:
 
 1. Navigate to the **Publishing** tab and select **Set a New Version**.
 
-<Screenshot darkened url="https://app.speakeasy.com/org/">
-![Screenshot of the publishing tab in the Speakeasy dashboard.](../assets/versioning-1.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="https://app.speakeasy.com/org/"
+  image={{
+    src: versioning1Image,
+    alt: "Screenshot of the publishing tab in the Speakeasy dashboard."
+  }}
+/>
 
 2. Enter the version following SemVer conventions. The dashboard validates and ensures no version override.
 
-<Screenshot darkened url="https://app.speakeasy.com/org/">
-![Screenshot of the version pop-up in the Speakeasy dashboard.](../assets/versioning-2.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="https://app.speakeasy.com/org/"
+  image={{
+    src: versioning2Image,
+    alt: "Screenshot of the version pop-up in the Speakeasy dashboard."
+  }}
+/>
 
 3. Click **Submit Version Change** to apply.
 
