--- a/docs/prep-openapi/overlays/apply-overlays.mdx
+++ b/docs/prep-openapi/overlays/apply-overlays.mdx
@@ -4,6 +4,10 @@ sidebar_label: Apply Overlays
 description: "Overlays are patch files that implement changes to an OpenAPI document without modifying the upstream source. This guide explains how overlays work and how to apply them."
 ---
 
+import overlays1Image from '@/content/docs/assets/overlays-1.png'
+import overlays2Image from '@/content/docs/assets/overlays-2.png'
+import overlays3Image from '@/content/docs/assets/overlays-3.png'
+import overlays4Image from '@/content/docs/assets/overlays-4.png'
 
 # Apply an overlay
 
@@ -26,22 +30,46 @@ brew install speakeasy-api/homebrew-tap/speakeasy
 
 Run `speakeasy configure sources` and select or create a source to add an overlay to the Speakeasy workflow file.
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal after running speakeasy configure sources.](./assets/overlays-1.png)</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: overlays1Image,
+    alt: "Screenshot of the terminal after running speakeasy configure sources."
+  }}
+/>
 
 ### 3. Add an overlay
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal prompting the user to add an overlay.](./assets/overlays-2.png)</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: overlays2Image,
+    alt: "Screenshot of the terminal prompting the user to add an overlay."
+  }}
+/>
 
 ### 4. Provide the overlay file path
 
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal showing a succesful overlay application.](./assets/overlays-3.png)</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: overlays3Image,
+    alt: "Screenshot of the terminal showing a succesful overlay application."
+  }}
+/>
 
 
 ### 5. Provide the location for the output build
 
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal showing completed setup.](./assets/overlays-4.png)</Screenshot>
+<Screenshot 
+  variant="cli" 
+  image={{
+    src: overlays4Image,
+    alt: "Screenshot of the terminal showing completed setup."
+  }}
+/>
 
 
 The overlay will now apply to the OpenAPI document as part of the Speakeasy workflow. Execute the workflow by running `speakeasy run`.
