--- a/docs/publish-sdk.mdx
+++ b/docs/publish-sdk.mdx
@@ -4,6 +4,13 @@ description: "Learn how to publish your Speakeasy-generated SDK to popular packa
 position: 2
 ---
 
+import configurePublishingImage from '@/content/docs/assets/publish-sdks/configure-publishing.png'
+import configureTokenImage from '@/content/docs/assets/publish-sdks/configure-token.png'
+import publishingSuccessImage from '@/content/docs/assets/publish-sdks/publishing-success.png'
+import publishingDispatchImage from '@/content/docs/assets/publish-sdks/publishing-dispatch.png'
+import publishingOverviewImage from '@/content/docs/assets/publish-sdks/publishing-overview.png'
+import setPublishingSecretsImage from '@/content/docs/assets/publish-sdks/set-publishing-secrets.png'
+import pendingReleaseImage from '@/content/docs/assets/publish-sdks/pending-release.png'
 
 # Publish SDKs
 
@@ -52,13 +59,25 @@ speakeasy configure publishing
 
 Select the existing SDK targets to configure publishing. If no SDK targets are available, run `speakeasy configure targets` first.
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal after running Speakeasy configure publishing.](./assets/publish-sdks/configure-publishing.png)</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: configurePublishingImage,
+    alt: "Screenshot of the terminal after running Speakeasy configure publishing."
+  }}
+/>
 
 ### 2. Provide publishing credentials
 
 Default input environment variables for publishing are provided.
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal prompting the user for an NPM token.](./assets/publish-sdks/configure-token.png)</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: configureTokenImage,
+    alt: "Screenshot of the terminal prompting the user for an NPM token."
+  }}
+/>
 
 ### 3. Verify configuration files
 
@@ -68,7 +87,13 @@ Once configuration is complete, the following files will be generated or updated
 - `.github/workflows/sdk_generation.yaml`  – GitHub Action to generate SDKs.
 - `.github/workflows/sdk_publish.yaml` – GitHub Action to publish SDKs.
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal after succesfully running Speakeasy configure publishing.](./assets/publish-sdks/publishing-success.png)</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: publishingSuccessImage,
+    alt: "Screenshot of the terminal after succesfully running Speakeasy configure publishing."
+  }}
+/>
 
 ### 4. Set up repository secrets
 
@@ -80,7 +105,13 @@ Once configuration is complete, the following files will be generated or updated
 
 Commit and push the updated workflow files. Once your generated SDK has been pushed to GitHub, you can manually kick off publishing for your first version.
 
-<Screenshot variant="cli" docs={true}>![Screenshot of manually kicking off publishing in Github Actions.](./assets/publish-sdks/publishing-dispatch.png)</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: publishingDispatchImage,
+    alt: "Screenshot of manually kicking off publishing in Github Actions."
+  }}
+/>
 
 ### 6. Complete language-specific configuration
 
@@ -256,13 +287,31 @@ Copy the GitHub Actions workflows to the new repository under `.github/workflows
 
 The SDK publishing tab in the Speakeasy dashboard provides an overview of the publishing history and offers various utilities for setting up and maintaining SDK publishing.
 
-<Screenshot darkened url="https://app.speakeasy.com/" isLinkEnabled={true} docs={true}>![Publishing Overview](./assets/publish-sdks/publishing-overview.png)</Screenshot>
+<Screenshot 
+  variant="web"
+  image={{
+    src: publishingOverviewImage,
+    alt: "Publishing Overview"
+  }}
+/>
 
 If package manager secrets were not set during the initial SDK repo setup, the publishing dashboard provides an interface to attach these secrets to the repository.
 
-<Screenshot darkened url="https://app.speakeasy.com/org" docs={true}>![Setting Publishing Secrets](./assets/publish-sdks/set-publishing-secrets.png)</Screenshot>
+<Screenshot 
+  variant="web"
+  image={{
+    src: setPublishingSecretsImage,
+    alt: "Setting Publishing Secrets"
+  }}
+/>
 
 For GitHub actions set up with `mode:pr`, the publishing dashboard highlights open PRs in the SDK repo that are pending release. This view displays the exact SDK version that will be published upon merging the PR.
 
-<Screenshot url="https://app.speakeasy.com/org" docs={true}>![Pending Release PRs](./assets/publish-sdks/pending-release.png)</Screenshot>
+<Screenshot 
+  variant="web"
+  image={{
+    src: pendingReleaseImage,
+    alt: "Pending Release PRs"
+  }}
+/>
 
