--- a/docs/testing.mdx
+++ b/docs/testing.mdx
@@ -3,8 +3,8 @@ title: Contract testing
 description: "Learn how to generate and run automated testing for your API and SDKs."
 ---
 
-;
 import { LanguageTestingGrid } from "~/features/shared/recipes";
+import sdkTestingBillingImage from '@/content/docs/assets/sdk-testing-billing.png'
 
 # Testing with Speakeasy
 
@@ -56,11 +56,13 @@ To enable testing features, you need the following:
 - Enable the SDK Testing add-on in `settings/billing` under your account.
 
 <Screenshot
-  darkened
+  variant="web"
   url="app.speakeasy.com"
->
-  ![SDK Testing add on in the Speakeasy dashboard.](./assets/sdk-testing-billing.png)
-</Screenshot>
+  image={{
+    src: sdkTestingBillingImage,
+    alt: "SDK Testing add on in the Speakeasy dashboard."
+  }}
+/>
 
 <LanguageTestingGrid />
 
