--- a/docs/customize-testing/github-actions.mdx
+++ b/docs/customize-testing/github-actions.mdx
@@ -3,25 +3,34 @@ title: "Testing in GitHub Actions"
 description: "Learn how to customize testing for your API and SDKs in GitHub Actions."
 ---
 
-;
+import testingRunImage from '@/content/docs/assets/configure-github/testing-run.png'
+import testingCommentImage from '@/content/docs/assets/configure-github/testing-comment.png'
+import prPatPart1Image from '@/content/docs/assets/configure-github/pr-pat-part1.png'
+import prPatPart2Image from '@/content/docs/assets/configure-github/pr-pat-part2.png'
+import prPatPart3Image from '@/content/docs/assets/configure-github/pr-pat-part3.png'
+import prCreationTokenImage from '@/content/docs/assets/configure-github/pr-creation-token.png'
 
 # Testing in GitHub Actions
 
 Automatically run Speakeasy tests on SDK pull requests or other events in a GitHub repository via GitHub Actions.
 
 <Screenshot
-  darkened
+  variant="web"
   url="github.com"
->
-  ![A screenshot of a successful test check](../assets/configure-github/testing-run.png)
-</Screenshot>
+  image={{
+    src: testingRunImage,
+    alt: "A screenshot of a successful test check"
+  }}
+/>
 
 <Screenshot
-  darkened
+  variant="web"
   url="github.com"
->
-  ![A screenshot of a successful test comment](../assets/configure-github/testing-comment.png)
-</Screenshot>
+  image={{
+    src: testingCommentImage,
+    alt: "A screenshot of a successful test comment"
+  }}
+/>
 
 
 ## Setting up a Github Actions Check
@@ -91,34 +100,42 @@ This is a workaround [recommended](https://docs.github.com/en/actions/writing-wo
 1. Create your [fine-grained](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#creating-a-fine-grained-personal-access-token) PAT with `Pull requests Read/Write` permissions. Make sure it at least has access to your SDK repository. We also recommend setting this to no expiration.
 
 <Screenshot
-  darkened
+  variant="web"
   url="github.com"
->
-  ![Setting up your PAT](../assets/configure-github/pr-pat-part1.png)
-</Screenshot>
+  image={{
+    src: prPatPart1Image,
+    alt: "Setting up your PAT"
+  }}
+/>
 
 <Screenshot
-  darkened
+  variant="web"
   url="github.com"
->
-  ![Providing access to a specific repo](../assets/configure-github/pr-pat-part2.png)
-</Screenshot>
+  image={{
+    src: prPatPart2Image,
+    alt: "Providing access to a specific repo"
+  }}
+/>
 
 <Screenshot
-  darkened
+  variant="web"
   url="github.com"
->
-  ![Pull request permissions](../assets/configure-github/pr-pat-part3.png)
-</Screenshot>
+  image={{
+    src: prPatPart3Image,
+    alt: "Pull request permissions"
+  }}
+/>
 
 2. In all of your SDK repositories navigate to `Settings > Secrets and variables > Actions` and save your PAT as a Repository secret under the name `PR_CREATION_PAT`.
 
 <Screenshot
-  darkened
+  variant="web"
   url="github.com"
->
-  ![Providing access to a specific repo](../assets/configure-github/pr-creation-token.png)
-</Screenshot>
+  image={{
+    src: prCreationTokenImage,
+    alt: "Providing access to a specific repo"
+  }}
+/>
 
 3. In all of your for sdk_generation.yaml workflows add the `pr-creation-token` as a provided secret at the bottom.
 
