--- a/docs/customize-testing/running-tests.mdx
+++ b/docs/customize-testing/running-tests.mdx
@@ -3,6 +3,9 @@ title: "Running SDK Tests"
 description: "Learn how to run tests for your SDK."
 ---
 
+import cliRunTestsImage from '@/content/docs/assets/cli-run-tests.png'
+import testReportImage from '@/content/docs/assets/test-report.png'
+
 # Running SDK Tests
 
 Run testing, via any of these options, depends on your desired use case:
@@ -23,9 +26,13 @@ This will run tests for all SDKs in the repo.
 speakeasy test -t all
 ```
 
-<Screenshot variant="cli">
-  ![A screenshot of successful tests in the CLI.](../assets/cli-run-tests.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: cliRunTestsImage,
+    alt: "A screenshot of successful tests in the CLI."
+  }}
+/>
 
 ## During Run
 
@@ -47,11 +54,13 @@ targets:
 You can view your test reports by navigating to the Tests tab under a particular SDK in the [speakeasy dashboard](https://app.speakeasy.com/).
 
 <Screenshot
-  darkened
+  variant="web"
   url="app.speakeasy.com"
->
-  ![Speakeasy dashboard test report.](../assets/test-report.png)
-</Screenshot>
+  image={{
+    src: testReportImage,
+    alt: "Speakeasy dashboard test report."
+  }}
+/>
 
 ## Next Steps
 
