--- a/docs/integrations/bump.mdx
+++ b/docs/integrations/bump.mdx
@@ -5,8 +5,9 @@ title: Integrate Speakeasy with Bump.sh
 description: "Learn how to integrate Speakeasy code generation into Bump.sh docs."
 ---
 
-
 import GetPublicUrlSnippet from "@/content/docs/integrations/_get-public-url-snippet.mdx";
+import bumpWithSpeakeasyOpenapiImage from '@/content/docs/assets/code-samples/bump-with-speakeasy-openapi.png'
+import bumpAutomaticDeploymentSettingsImage from '@/content/docs/assets/code-samples/bump-automatic-deployment-settings.png'
 
 # Integrate Speakeasy with Bump.sh
 
@@ -16,9 +17,14 @@ import GetPublicUrlSnippet from "@/content/docs/integrations/_get-public-url-sni
 
 Bump.sh is a hosted solution for simple API documentation, API catalogs, and API explorers, which makes it a great tool to use in conjunction with [Speakeasy's Automated Code Samples feature](/docs/code-samples/automated-code-sample-urls). Embed your SDKs right into the API documentation, making it easier for developers to get started with your API.
 
-<Screenshot darkened url="docs.myapi.com" docs={true}>
-  ![Bump.sh docs with Speakeasy SDK code samples](../assets/code-samples/bump-with-speakeasy-openapi.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="docs.myapi.com" 
+  image={{
+    src: bumpWithSpeakeasyOpenapiImage,
+    alt: "Bump.sh docs with Speakeasy SDK code samples"
+  }}
+/>
 
 ## Prerequisites
 
@@ -37,9 +43,14 @@ To integrate Bump.sh with Speakeasy, you'll need the following:
 
 In the Bump.sh dashboard, either create **New Documentation** or open existing API documentation. Click **Settings** and open the **Automatic Deployment** tab.
 
-<Screenshot darkened url="bump.sh/dashboard" docs={true}>
-  ![Bump.sh automatic deployment settings](../assets/code-samples/bump-automatic-deployment-settings.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="bump.sh/dashboard" 
+  image={{
+    src: bumpAutomaticDeploymentSettingsImage,
+    alt: "Bump.sh automatic deployment settings"
+  }}
+/>
 
 Select whether you want to deploy via GitHub Actions or CLI, and copy the appropriate example, which will include the Doc ID and the API token for you.
 
@@ -55,9 +66,14 @@ bump deploy https://spec.speakeasy.com/walker/walker/book-club-oas-with-code-sam
 
 When the import is complete, the API documentation will be rendered, and Speakeasy-generated code samples will be embedded in the relevant OpenAPI operations.
 
-<Screenshot darkened url="bump.sh/your-docs" docs={true}>
-  ![Bump.sh docs with Speakeasy code samples](../assets/code-samples/bump-with-speakeasy-openapi.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="bump.sh/your-docs" 
+  image={{
+    src: bumpWithSpeakeasyOpenapiImage,
+    alt: "Bump.sh docs with Speakeasy code samples"
+  }}
+/>
 
 ## Next steps
 
