--- a/docs/integrations/scalar.mdx
+++ b/docs/integrations/scalar.mdx
@@ -5,21 +5,25 @@ title: Integrate Speakeasy with Scalar
 description: "Learn how to integrate Speakeasy code generation into Scalar docs."
 ---
 
-
 import GetPublicUrlSnippet from "@/content/docs/integrations/_get-public-url-snippet.mdx";
+import scalarDocsUrlImportedImage from '@/content/docs/assets/code-samples/scalar-docs-url-imported.png'
+import scalarReferenceToImportUrlImage from '@/content/docs/assets/code-samples/scalar-reference-to-import-url.png'
+import scalarLinkOpenapiSpecificationModalImage from '@/content/docs/assets/code-samples/scalar-link-openapi-specification-modal.png'
 
 # Integrate Speakeasy with Scalar
 
 ---
 
-
-
 With **Scalar**, you can easily create and maintain API documentation. Scalar renders documentation by referencing a live OpenAPI document, making it compatible with [Speakeasy's Automated Code Samples feature](/docs/code-samples/automated-code-sample-urls).
 
-<Screenshot darkened url="docs.myapi.com" docs={true}>
-  ![Scalar docs with successful linked
-  URL](../assets/code-samples/scalar-docs-url-imported.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="docs.myapi.com" 
+  image={{
+    src: scalarDocsUrlImportedImage,
+    alt: "Scalar docs with successful linked URL"
+  }}
+/>
 
 ## Prerequisites
 
@@ -36,23 +40,36 @@ To integrate Scalar with Speakeasy, you'll need the following:
 
 Open a [Scalar project](https://docs.scalar.com), go to the **Reference** tab, and click **Import URL**.
 
-<Screenshot darkened url="docs.scalar.com" docs={true}>
-  ![Screenshot of the Scalar UI Project Reference tab, showing the Import URL link](../assets/code-samples/scalar-reference-to-import-url.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="docs.scalar.com" 
+  image={{
+    src: scalarReferenceToImportUrlImage,
+    alt: "Screenshot of the Scalar UI Project Reference tab, showing the Import URL link"
+  }}
+/>
 
 Paste the combined spec URL copied from Speakeasy into the provided field, optionally check **Create Link**, then click **Import**.
 
-<Screenshot darkened url="docs.scalar.com" docs={true}>
-  ![Screenshot of the Scalar page where the public
-  URL from Speakeasy is added](../assets/code-samples/scalar-link-openapi-specification-modal.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="docs.scalar.com" 
+  image={{
+    src: scalarLinkOpenapiSpecificationModalImage,
+    alt: "Screenshot of the Scalar page where the public URL from Speakeasy is added"
+  }}
+/>
 
 When the import is complete, the API documentation will be rendered.
 
-<Screenshot darkened url="docs.scalar.com">
-  ![Screenshot showing API documentation in Scalar after successfully linking the
-  URL](../assets/code-samples/scalar-docs-url-imported.png)
-</Screenshot>
+<Screenshot 
+  variant="web"
+  url="docs.scalar.com"
+  image={{
+    src: scalarDocsUrlImportedImage,
+    alt: "Screenshot showing API documentation in Scalar after successfully linking the URL"
+  }}
+/>
 
 ## Next steps
 
