--- a/guides/sdks/generate-in-a-subdirectory.mdx
+++ b/guides/sdks/generate-in-a-subdirectory.mdx
@@ -3,6 +3,11 @@ title: "Generate SDK in a subdirectory"
 description: "Setup your SDK in a subdirectory."
 ---
 
+import subdirectoryImage1 from '@/content/guides/sdks/assets/subdirectory/1.png'
+import subdirectoryImage2 from '@/content/guides/sdks/assets/subdirectory/2.png'
+import subdirectoryImage3 from '@/content/guides/sdks/assets/subdirectory/3.png'
+import subdirectoryImage4 from '@/content/guides/sdks/assets/subdirectory/4.png'
+import subdirectoryImage5 from '@/content/guides/sdks/assets/subdirectory/5.png'
 
 # Generate SDK in a Subdirectory
 
@@ -12,41 +17,60 @@ Similar to setting up a monorepo, you can also configure Speakeasy to generate y
 
 In the root of your existing directory run `speakeasy quickstart`: 
 
-<Screenshot variant="cli">
-  ![A screenshot of the speakeasy quickstart command in the CLI.](../assets/subdirectory/1.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: subdirectoryImage1,
+    alt: "A screenshot of the speakeasy quickstart command in the CLI."
+  }}
+/>
 
 ## Step 2: 
 
 Select your generation language.
 
-<Screenshot variant="cli">
-  ![A screenshot of the CLI prompting the user to select their generation language.](../assets/subdirectory/2.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: subdirectoryImage2,
+    alt: "A screenshot of the CLI prompting the user to select their generation language."
+  }}
+/>
 
 ## Step 3: 
 
 Name your package.
 
-
-<Screenshot variant="cli">
-  ![A screenshot of the package name in the Speakeasy CLI.](../assets/subdirectory/3.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: subdirectoryImage3,
+    alt: "A screenshot of the package name in the Speakeasy CLI."
+  }}
+/>
 
 ## Step 4: 
 
 If you're setting your SDK up in a folder with existing subfolders, you will be prompted to select an output directory. 
 
-<Screenshot variant="cli">
-  ![A screenshot of the user being prompted to provide an output directory in the CLI.](../assets/subdirectory/4.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: subdirectoryImage4,
+    alt: "A screenshot of the user being prompted to provide an output directory in the CLI."
+  }}
+/>
 
 ## Step 5: 
 
 Complete generating your SDK.
 
-<Screenshot variant="cli">
-  ![A screenshot of a succesful CLI generation.](../assets/subdirectory/5.png)
-</Screenshot>
+<Screenshot 
+  variant="cli"
+  image={{
+    src: subdirectoryImage5,
+    alt: "A screenshot of a succesful CLI generation."
+  }}
+/>
 
 Going forward to generate your SDK navigate to your SDK folder and run `speakeasy run`.
